// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly change the button based on the status and license 1`] = `
<Button
  className="js-confirm"
  disabled={false}
  onClick={[Function]}
>
  save
</Button>
`;

exports[`should correctly change the button based on the status and license 2`] = `
<Button
  className="js-confirm"
  disabled={true}
  onClick={[Function]}
>
  save
</Button>
`;

exports[`should correctly change the button based on the status and license 3`] = `
<Button
  className="js-confirm"
  disabled={true}
  onClick={[Function]}
>
  marketplace.install
</Button>
`;

exports[`should display correctly 1`] = `
<Modal
  contentLabel="marketplace.upgrade_to_x.Foo"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      marketplace.upgrade_to_x.Foo
    </h2>
  </header>
  <LicenseEditionSet
    className="modal-body"
    edition={
      Object {
        "downloadUrl": "download_url",
        "homeUrl": "more_url",
        "key": "foo",
        "licenseRequestUrl": "license_url",
        "name": "Foo",
        "textDescription": "Foo desc",
      }
    }
    editions={
      Array [
        Object {
          "downloadUrl": "download_url",
          "homeUrl": "more_url",
          "key": "foo",
          "licenseRequestUrl": "license_url",
          "name": "Foo",
          "textDescription": "Foo desc",
        },
      ]
    }
    updateLicense={[Function]}
  />
  <footer
    className="modal-foot"
  >
    <ResetButtonLink
      onClick={[MockFunction]}
    >
      cancel
    </ResetButtonLink>
  </footer>
</Modal>
`;
